fix: homepage slideshow vertical alignment correctly account for pagination area

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -70,6 +70,8 @@
     border-radius: var(--border-radius)
     width: 2em
     height: 4em
+    top: calc(50% - 15px)
+    transform: translateY(-50%)
 
   .splide__slide
     width: 100%
